[GUI] receive address padding overlapping text fix.

--- a/src/qt/pivx/res/css/style_dark.css
+++ b/src/qt/pivx/res/css/style_dark.css
@@ -1851,7 +1851,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     color:#FFFFFF;
     background-color: #26b088ff;
     font-size:22px;
-    padding:10px 20px;
+    padding:10px 15px;
 }
 
 
