--- a/src/qt/pivx/res/css/style_light.css
+++ b/src/qt/pivx/res/css/style_light.css
@@ -1848,7 +1848,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     color:#707070;
     background-color: #f2f2f2;
     font-size:22px;
-    padding:10px 20px;
+    padding:10px 15px;
 }
 
 
